# pokerole-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  database.sqlite  docker-compose.yaml  wipe_local_db.sh
custom_data/Pokedex/: Pawmi.json  Pawmo.json  Pawmot.json
migrations/: 20230618163414_initial.sql  20230620110059_user_table.sql  20230621052809_username_cache.sql  20230621104657_creation_dates.sql  20230625170719_inventory_upgrades.sql  20230707054129_quest_integration.sql  20230801100134_shops.sql  20231116095400_shop_rename_to_wallet.sql  20231225093413_weekly_rewards.sql  20231226082442_character_pokemon_aware.sql  20231228112401_character_genders.sql  20231228123305_emojis.sql  20240109123541_quest-reactions.sql  20240110071553_character-sheet-editor.sql  20240128194725_character-retirement.sql  20240201105801_battlepoints.sql  20240218092913_hidden_ability_unlocks.sql  20240221120027_terastallization.sql  20240312085210_gm_experience.sql  20240505135140_emoji_guild.sql  20240515085922_guild_names_and_default_roles.sql
src/: cache.rs  character_stats.rs  commands.rs  csv_utils.rs  data.rs  database_helpers.rs  discord_error_codes.rs  emoji.rs  enums.rs  errors.rs  game_data.rs  helpers.rs  logger.rs  main.rs  parse_error.rs  pokemon_api_parser.rs  pokerole_discord_py_csv_parser.rs
src/commands/: ability.rs  about.rs  autocompletion.rs  calculate_hp_damage_modifier.rs  commands.rs  create_emojis.rs  create_role_reaction_post.rs  efficiency.rs  emoji.rs  encounter.rs  initialize_character.rs  item.rs  learns.rs  list_characters.rs  metronome.rs  mod.rs  move.rs  nature.rs  open_box.rs  pin_or_unpin.rs  player_info.rs  pokelearns.rs  poll.rs  potion.rs  prune_emojis.rs  register_existing_emoji.rs  roll.rs  rule.rs  say.rs  scale.rs  season.rs  select_random.rs  server_stats.rs  setting_time_offset.rs  setup_emoji_guild.rs  setup_guild.rs  stats.rs  status.rs  store_gm_experience.rs  timestamp.rs  (+5 more)
src/commands/characters/: character_sheet.rs  complete_quest.rs  cs_mock.rs  (+25 more)
src/data/: ability.rs  game_data.rs  game_rule.rs  item.rs  mod.rs  move.rs  nature.rs  pokemon.rs  potion.rs  rule.rs  status_effect.rs  type_efficiency.rs  weather.rs
src/events/: backups.rs  button_interaction.rs  mod.rs  monthly_reset.rs  role_reaction.rs  select_menu_interaction.rs  weekly_reset.rs
src/game_data/: ability.rs  item.rs  mod.rs  move.rs  nature.rs  pokemon.rs  potion.rs  rule.rs  status_effect.rs  type_efficiency.rs  weather.rs  zmove.rs
src/pokerole_data/: ability.rs  item.rs  mod.rs  moves.rs  nature.rs  parser.rs  pokemon.rs  raw_item.rs  raw_pokemon.rs
(+70 files in other folders)
