[package]
name = "pokerole-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["builder", "cache"] }
poise = "0.6.1"
tokio = { version  = "1.36.0", features = ["rt-multi-thread"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
futures = { version = "0.3.30", default-features = false }
log = "0.4.20"
env_logger = "0.11.2"
rand = { version = "0.8.5", features = ["alloc"] }
strum = "0.26.1"
strum_macros = "0.26.1"
chrono = "0.4.34"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
regex = "1.10.3"
more-asserts = "0.3.1"
image = "0.24.8"
