[package]
name = "pokerole-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["builder", "cache"] }
poise = "0.6.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
futures = { version = "0.3.30", default-features = false }
log = "0.4.21"
env_logger = "0.11.3"
rand = { version = "0.8.5", features = ["alloc"] }
strum = "0.26.2"
strum_macros = "0.26.4"
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
regex = "1.10.5"
more-asserts = "0.3.1"
image = "0.25.1"
